Fixed some formatting issues on smaller screens

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -6,7 +6,7 @@
   margin-left: 1.5rem;
   margin-right: 1.5rem;
   padding-top: 4rem;
-  height: 650px;
+  height: 750px;
   display: flex;
 }
 
@@ -31,14 +31,14 @@
 
 #home .img-container {
   position: relative;
-  height: 100%;
+  height: 88%;
   width: fit-content;
   display: flex;
   align-items: center;
 }
 
 #home .img {
-  height: 85%;
+  height: 90%;
   width: 100%;
   object-fit: cover;
 }
@@ -123,7 +123,7 @@
 
 @media (max-width: 768px) {
   #home .container {
-    height: 100vh;
+    min-height: 100vh;
     flex-direction: column-reverse;
   }
 
@@ -148,6 +148,6 @@
 
   #home .img {
     height: 95%;
-    margin: auto;
+    margin-top: 1.5rem;
   }
 }
