--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -127,7 +127,7 @@
     }
 
     #contact .contact-container {
-        width: 75%;
+        width: 80%;
     }
 
     #contact .contact-h1 {
