--- a/src/components/work/work.css
+++ b/src/components/work/work.css
@@ -56,5 +56,6 @@
 
     #works .card-box {
         grid-template-columns: repeat(2, minmax(0, 1fr));
+        margin-left: 0;
     }
 }
